--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -35,6 +35,7 @@
       </div>
       {% if current_user.is_authenticated %}
       <meta name="user-id" content="{{ current_user.id }}">
+      <meta name="user-key" content="{{ current_user.secret_key }}">
       <div class="ms-auto d-flex">
         <!-- Add this notification dropdown -->
         <div class="nav-item dropdown me-2">
@@ -135,7 +136,6 @@
     {% block content %}{% endblock %}
   </div>
   <!-- Custom JS -->
-  {% block scripts %}
-  {% endblock %}
+  <script src="{{ url_for('static', filename='js/notifications.js') }}"></script>
 </body>
 </html>
