--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -47,3 +47,10 @@
   font-size: 0.8em;
   margin: 0;
 }
+
+.bg-dark-turquoise { 
+  background-color: #008B8B !important; 
+}
+.bg-dark-orange { 
+  background-color: #FF8C00 !important; 
+}
