feat: when assigning managers can see availability

--- a/main/page_dashboard/templates/dashboard.html
+++ b/main/page_dashboard/templates/dashboard.html
@@ -3,7 +3,6 @@
 {% block title %}Dashboard{% endblock %}
 
 {% block content %}
-
 <div class="container mt-4">
   <!-- Manager Dashboard -->
   {% if manager %}
@@ -142,16 +141,19 @@
             <td><a href="/item/{{ request.item.url }}">{{ request.item.title }}</a></td>
             <td>
               {% if not eligible_experts %}
-              <p>No available experts</p>
+                <p>No available experts</p>
               {% else %}
-              <select class="form-select form-select-sm expert-select" style="width: auto; display: inline-block;">
-                {% for expert in eligible_experts %}
-                <option value="{{ expert.id }}">{{ expert.username }}</option>
-                {% endfor %}
-              </select>
-              <button class="btn btn-sm btn-outline-primary assign-expert-btn my-sm-1">
-                Assign
-              </button>
+                <select class="form-select form-select-sm expert-select" style="width: auto; display: inline-block;">
+                  {% for expert in eligible_experts %}
+                  <option value="{{ expert.id }}" data-availability="{{ get_expert_availability(expert) }}">
+                    {{ expert.username }}
+                  </option>
+                  {% endfor %}
+                </select>
+                <span class="availability-text ms-2"></span>
+                <button class="btn btn-sm btn-outline-primary assign-expert-btn my-sm-1">
+                  Assign
+                </button>
               {% endif %}
             </td>
           </tr>
@@ -161,11 +163,12 @@
     </div>
   </div>
   {% endif %}
+  
   <!-- Expert Dashboard -->
   {% elif expert %}
   <h1>Expert Dashboard</h1>
   <div class="container mt-5">
-    <h2>Pending Authentications</h1>
+    <h2>Pending Authentications</h2>
     {% if expert['pending'] %}
     <ul>
       {% for request in expert['pending'] %}
@@ -195,7 +198,7 @@
     {% else %}
     <p>No auctions to authenticate.</p>
     {% endif %}
-    <h2>Completed Authentications</h1>
+    <h2>Completed Authentications</h2>
       {% if expert['complete'] %}
       <ul>
         {% for request in expert['complete'] %}
@@ -231,7 +234,7 @@
   <h1>User Dashboard</h1>
   {% endif %}
   <div class="container mt-5">
-    <h2>Your Auctions</h1>
+    <h2>Your Auctions</h2>
     {% if user['auctions'] %}
     <ul>
       {% for item in user['auctions'] %}
@@ -270,5 +273,4 @@
 <script src="{{ url_for('static', filename='js/updateRole.js') }}"></script>
 <script src="{{ url_for('static', filename='js/updateConfig.js') }}"></script>
 <script src="{{ url_for('static', filename='js/assignExpert.js') }}"></script>
-
 {% endblock %}
