style: improved dashboard button spacing

--- a/main/page_dashboard/templates/dashboard.html
+++ b/main/page_dashboard/templates/dashboard.html
@@ -55,7 +55,7 @@
     </div>
   </div>
   <!-- View Rota Button for managers -->
-  <div class="mb-3">
+  <div class="my-3">
     <a href="{{ url_for('manager_page.expert_availability') }}" class="btn btn-primary">
       Availability Overview
     </a>
