--- a/main/page_create/templates/create.html
+++ b/main/page_create/templates/create.html
@@ -19,6 +19,29 @@
       <div class="alert alert-danger" role="alert">{{ error }}</div>
       {% endfor %}
     </div>
+    <!-- Category -->
+    <div class="form-group">
+      <label for="select-category" class="form-label">Category</label>
+      <select id="{{ form.category_id.id }}" name="{{ form.category_id.name }}" class="form-control" required>
+        <option value="">Select a category</option>
+        {% for value, text in form.category_id.choices %}
+          <option value="{{ value }}" 
+            {% if form.category_id.data|int == value %}selected{% endif %}
+            {% if value in form.category_descriptions %} 
+            title="{{ form.category_descriptions[value] }}"
+            {% endif %}>
+            {{ text }}
+          </option>
+        {% endfor %}
+      </select>
+      {% if form.category_id.errors %}
+      <div class="invalid-feedback d-block">
+        {% for error in form.category_id.errors %}
+        {{ error }}
+        {% endfor %}
+      </div>
+      {% endif %}
+    </div>
     <!-- Description -->
     <div class="form-group">
       <label for="enter-description" class="form-label">Description</label>
